@startuml 26-clases-datos-negocio
title El agregado DatosNegocio (business.sagas.dominio.datosnegocio): dominio, puertos y adaptador de persistencia
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

package "business.sagas.dominio.datosnegocio" {
  class DatosNegocio <<@AggregateRoot>> {
    -id : DatosNegocioId  «@Identity»
    -externalId : ExternalId
    -datoNegocio1 : DatoNegocio1
    -datoNegocio2 : DatoNegocio2
    -datoNegocio3 : DatoNegocio3
    -purgadoEn : Instant
    +{static} crear(id, externalId, datoNegocio1,\ndatoNegocio2, datoNegocio3) : DatosNegocio  «purgadoEn = null»
    +{static} rehidratar(..., purgadoEn) : DatosNegocio
    +purgar(ahora)  «reloj determinista: sella\nthis.purgadoEn = ahora»
    +estaPurgada() : boolean
    +id() / +externalId() / +datoNegocio1() / +datoNegocio2() / +datoNegocio3() / +purgadoEn()
  }
  note right of DatosNegocio
    Correlacionado con la saga principal por ExternalId (misma
    correlación externa que el resto de sagas, ver 15). Deliberadamente
    SIN lista de documentos en memoria: son blobs y se piden aparte al
    repositorio (documentosDe), para no cargarlos accidentalmente cada
    vez que se carga el agregado. purgadoEn: NULL mientras los
    documentos conservan su contenido; lo sella purgar(ahora), que
    invoca ServicioPurgarAdjuntos tras cargar el agregado (ver 09) --
    mismo patrón que creadaEn/actualizadaEn en OrdenRoot (ver 14).
  end note

  class DatosNegocioId <<@ValueObject, record>> {
    valor : UUID
    +{static} nuevo() : DatosNegocioId
  }
  class DatoNegocio1 <<@ValueObject, record>> {
    valor : Integer
  }
  class DatoNegocio2 <<@ValueObject, record>> {
    valor : LocalDate
  }
  class DatoNegocio3 <<@ValueObject, record>> {
    valor : String
    +prioridad() : Prioridad  «ORIGEN2(30) > ORIGEN1(20) > ORIGEN3(10),\notro valor -> Prioridad.normal()»
  }
  note bottom of DatoNegocio3
    ÚNICO lugar del lado sagas donde vive el saber ORIGEN->peso: el
    motor (ver 14) solo conoce Prioridad como VO neutro, sin saber
    qué origen le corresponde. Lo consume ServicioIniciarTramitacion
    al crear la orden principal (ver 01) y ServicioSagaPrincipal la
    hereda de la principal a las 3 hijas (orden.prioridad(), sin
    releer datos_negocio — ver 03/18).
  end note
  class DocumentoNegocio <<@Entity, record>> {
    nombre : String
    mimeType : String
    contenido : byte[]
  }
  note right of DocumentoNegocio
    Entidad hija de DatosNegocio, sin agregado propio: un blob con
    su metadato. Vive fuera del agregado en memoria (ver nota de
    arriba); su ciclo de vida lo gestiona el repositorio.
  end note

  class ExternalIdDuplicadoException <<RuntimeException>> {
    (ExternalId externalId, Throwable causa)
  }
  note bottom of ExternalIdDuplicadoException
    La lanza el adaptador de persistencia cuando el índice único de
    datos_negocio.external_id rechaza un crear() porque ya existe una
    fila con ese externalId (carrera de 2 POST /tramitaciones
    simultáneos). Traduce a vocabulario de negocio el
    DataIntegrityViolationException de Spring (infraestructura, no
    puede cruzar a business) — mismo patrón que
    ConcurrenciaOptimistaException con OptimisticLockingFailureException
    (ver 14). La captura ServicioIniciarTramitacion (ver 01 y 22).
  end note

  DatosNegocio *-- DatoNegocio1
  DatosNegocio *-- DatoNegocio2
  DatosNegocio *-- DatoNegocio3
}

class "ExternalId\n(business.ordermanager.dominio — ver 14)" as ExternalIdRef <<@ValueObject>>
DatosNegocio o-- ExternalIdRef : externalId

class "Prioridad\n(business.ordermanager.dominio — ver 14)" as PrioridadRef <<@ValueObject>>
DatoNegocio3 ..> PrioridadRef : prioridad()

package "business.sagas.aplicacion.puerto.salida" {
  interface PuertoDatosNegocio {
    +obtener(externalId) : RespuestaDatosNegocio
    record RespuestaDatosNegocio(datoNegocio1, datoNegocio2,\ndatoNegocio3, documentos : List<DocumentoNegocio>)
  }
  note right of PuertoDatosNegocio
    Servicio externo "DatosDeNegocio". SIN adaptador HTTP real
    todavía: solo la interfaz, sustituida por un doble en tests (ver
    CLAUDE.md, cobertura). Lo invoca ServicioIniciarTramitacion fuera
    de tx, antes de crear los agregados — ver 01.
  end note

  interface RepositorioDatosNegocio {
    +crear(DatosNegocio, List<DocumentoNegocio>)  «lanza\nExternalIdDuplicadoException»
    +cargar(DatosNegocioId) : DatosNegocio  «SOLO escalares,\nJAMÁS carga los blobs»
    +documentosDe(DatosNegocioId) : List<DocumentoNegocio>  «ÚNICA\nquery que toca el BLOB»
    +buscarPorExternalId(ExternalId) : Optional<DatosNegocio>
    +borrar(DatosNegocioId)  «documentos primero (sin cascade),\nluego el registro»
    +idsPorExternalIdsSinPurgar(List<ExternalId>) : List<DatosNegocioId>\n«los que TODAVÍA no tienen purgado_en sellado;\nUNA query por lote, evita N+1»
    +purgarAdjuntos(DatosNegocioId, Instant purgadoEn)  «contenido de TODOS sus\ndocumentos a NULL + transporta purgadoEn (ya sellado\npor el dominio) a columna; sin borrar filas; NULL\nsobre NULL si se repite»
  }
  note bottom of RepositorioDatosNegocio
    Lo usa ServicioSagaPrincipal (repoDatos.cargar/documentosDe,
    fuera de tx, PASO1/2/7 — ver 02 y 18), ServicioIniciarTramitacion
    (crear, dentro de tx — ver 01 y 22),
    ServicioPurgarAdjuntos (idsPorExternalIdsSinPurgar, cargar +
    DatosNegocio.purgar(ahora) + purgarAdjuntos(id, purgadoEn),
    ver 09 y 22) y ServicioPurgarCompletadas (buscarPorExternalId/
    borrar, ver 10 y 22) -- las dos últimas con el criterio POR
    TRAMITACIÓN de RepositorioOrden.externalIdsFinalizadosAntesDe
    (motor, ver 17), sin ninguna query propia de selección aquí.
  end note
}

PuertoDatosNegocio ..> DocumentoNegocio
RepositorioDatosNegocio ..> DatosNegocio
RepositorioDatosNegocio ..> DocumentoNegocio
RepositorioDatosNegocio ..> ExternalIdDuplicadoException : crear()

package "infraestructure.sagas.datosnegocio.persistencia" {
  class AdaptadorDatosNegocio <<@Component>> {
    -datosNegocio : DatosNegocioJpaRepository
    -documentos : DocumentoNegocioJpaRepository
    +crear(datosNegocio, documentos)  «save + flush (fuerza el chequeo\ndel índice único aquí, no en el commit\nde fuera) -> catch DataIntegrityViolationException»
    +cargar(id) : DatosNegocio
    +documentosDe(id) : List<DocumentoNegocio>
    +buscarPorExternalId(externalId) : Optional<DatosNegocio>
    +borrar(id)  «documentos.deleteByDatosnegocioId(id);\ndatosNegocio.deleteById(id) -- hija antes\nque padre, sin ON DELETE CASCADE»
    +idsPorExternalIdsSinPurgar(externalIds) : List<DatosNegocioId>
    +purgarAdjuntos(id, purgadoEn)  «documentos.purgarContenidoDe(id);\ndatosNegocio.sellarPurgadoEn(id, purgadoEn)\n-- purgadoEn ya sellado por el dominio, solo lo transporta»
  }

  interface DatosNegocioJpaRepository <<JpaRepository>> {
    +findByExternalId(externalId) : Optional<DatosNegocioEntity>
    +idsPorExternalIdsSinPurgar(externalIds) : List<String>  «nativeQuery:\nexternal_id IN :ids AND purgado_en IS NULL»
    +sellarPurgadoEn(id, purgadoEn)  «@Modifying nativeQuery:\nUPDATE datos_negocio SET purgado_en = :purgadoEn»
  }
  interface DocumentoNegocioJpaRepository <<JpaRepository>> {
    +findByDatosnegocioIdOrderBySecuenciaAsc(id) : List<DocumentoNegocioEntity>
    +deleteByDatosnegocioId(id)  «@Transactional explícito: query\nderivada delete...By, no abre tx propia»
    +purgarContenidoDe(id)  «@Modifying nativeQuery: UPDATE\ndatos_negocio_documento SET contenido = NULL»
  }

  class DatosNegocioEntity <<@Entity datos_negocio>> {
    @Id datosnegocioId : UUID
    externalId : String  «unique=true, replica en el DDL de H2\nel índice único real de Oracle»
    datoNegocio1 : Integer
    datoNegocio2 : LocalDate
    datoNegocio3 : String
    purgadoEn : Instant  «nullable; NULL hasta que la purga\nde adjuntos sella la fecha (ver 09)»
  }
  class DocumentoNegocioEntity <<@Entity datos_negocio_documento,\n@IdClass>> {
    @Id datosnegocioId : UUID
    @Id secuencia : Integer
    nombre : String
    mimeType : String
    @Lob contenido : byte[]  «nullable; la purga de adjuntos\nlo anula sin borrar la fila»
  }
  class DocumentoNegocioEntityId <<@IdClass>> {
    datosnegocioId : UUID
    secuencia : Integer
  }

  note bottom of DatosNegocioEntity
    Tablas Oracle: DDL manual en order-manager/db/ (datos_negocio.sql,
    datos_negocio_documento.sql — mismo régimen que el resto, ver 23).
    datos_negocio (datosnegocio_id PK, external_id UNIQUE, dato_negocio1
    NUMBER, dato_negocio2 DATE, dato_negocio3 VARCHAR2, purgado_en
    TIMESTAMP NULL) + datos_negocio_documento (datosnegocio_id +
    secuencia PK compuesta, FK a datos_negocio, nombre, mime_type,
    contenido BLOB NULL). Sin ON DELETE CASCADE (prohibido, ver
    CLAUDE.md): AdaptadorDatosNegocio.borrar() borra la hija
    explícitamente antes que el padre. Referenciada también por
    proceso_saga_principal.datosnegocio_id (FK, ver 23).
  end note
}

class "doble en tests\n(sin adaptador real)" as DobleTest
PuertoDatosNegocio <|.. DobleTest
RepositorioDatosNegocio <|.. AdaptadorDatosNegocio
AdaptadorDatosNegocio --> DatosNegocioJpaRepository
AdaptadorDatosNegocio --> DocumentoNegocioJpaRepository
DatosNegocioEntity "1" -- "n" DocumentoNegocioEntity : datosnegocio_id (FK)
DocumentoNegocioEntity ..> DocumentoNegocioEntityId : @IdClass

' Layout: dominio arriba, puertos en medio, infraestructura abajo
DatosNegocio -[hidden]down- PuertoDatosNegocio
PuertoDatosNegocio -[hidden]down- AdaptadorDatosNegocio
DatoNegocio1 -[hidden]right- DatoNegocio2
DatoNegocio2 -[hidden]right- DatoNegocio3
DatoNegocio3 -[hidden]right- DocumentoNegocio

note as NFrontera
  Agregado autocontenido de business.sagas (Fase 1 del rediseño que
  separó los datos de negocio de las sagas): la saga principal solo
  referencia su DatosNegocioId, nunca lo contiene — ver
  ContextoTramitacion en 15. business.ordermanager no lo conoce
  (regla de frontera, ver 14 y CLAUDE.md).
end note
@enduml
